--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
+    "less": "^4.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "sass": "^1.53.0",
